k8s/base/services/streaming/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-public
spec:
  selector:
    app: streaming
  ports:
    - name: websocket
      port: 8080
      targetPort: 8080
  type: LoadBalancer
